added new file  addcourse

--- a/app/src/main/res/layout/activity_edtprofile.xml
+++ b/app/src/main/res/layout/activity_edtprofile.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:hint="EnteR Your Address"
+        android:hint="Enter Your Address"
         android:padding="10dp"/>
 
 
