--- a/app/src/main/res/layout/activity_addcourse.xml
+++ b/app/src/main/res/layout/activity_addcourse.xml
@@ -32,7 +32,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnSave"
+            android:id="@+id/btnSave_Course"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
