--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -66,7 +66,7 @@
             android:textColor="@color/colorWhite"
             />
         <Button
-            android:id="@+id/course"
+            android:id="@+id/btncourse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
