added CRUD buttons for addcourse,edtprofile,student_reg ACTIVITY. on the profile activity, i change the EDit text to TEXT View for the user email Display BOX

--- a/app/src/main/res/layout/activity_edtprofile.xml
+++ b/app/src/main/res/layout/activity_edtprofile.xml
@@ -57,10 +57,48 @@
             android:text="SAVE"
             android:textColor="@color/colorWhite"
             />
+        <Button
+            android:id="@+id/btnUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="UPDATE"
+            android:textColor="@color/colorWhite"
+            />
 
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="SEARCH"
+            android:textColor="@color/colorWhite"
+            />
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="DELETE"
+            android:textColor="@color/colorWhite"
+            />
+
+
+    </LinearLayout>
 
 
 
