--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,7 +9,7 @@
     android:padding="10dp"
     tools:context=".MainActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/textviewUserEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
