--- a/app/src/main/res/layout/activity_student_reg.xml
+++ b/app/src/main/res/layout/activity_student_reg.xml
@@ -71,11 +71,48 @@
             android:text="SAVE"
             android:textColor="@color/colorWhite"
             />
+        <Button
+            android:id="@+id/btnsUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="UPDATE"
+            android:textColor="@color/colorWhite"
+            />
 
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/btnsSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="SEARCH"
+            android:textColor="@color/colorWhite"
+            />
+        <Button
+            android:id="@+id/btnsDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="DELETE"
+            android:textColor="@color/colorWhite"
+            />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
