--- a/app/src/main/res/layout/activity_addcourse.xml
+++ b/app/src/main/res/layout/activity_addcourse.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorCyan"
             android:text="SAVE"
             android:textColor="@color/colorWhite"
             />
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorCyan"
             android:text="UPDATE"
             android:textColor="@color/colorWhite"
             />
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorCyan"
             android:text="SEARCH"
             android:textColor="@color/colorWhite"
             />
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorCyan"
             android:text="DELETE"
             android:textColor="@color/colorWhite"
             />
