--- a/app/src/main/res/layout/activity_list_course.xml
+++ b/app/src/main/res/layout/activity_list_course.xml
@@ -7,16 +7,111 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".list_course">
+    tools:context=".report">
 
-    <ListView
-        android:id="@+id/listview_course"
+
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btncom401"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="COM 401"
+            android:textColor="@color/colorWhite"
+            />
+
+        <Button
+            android:id="@+id/btncom402"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="COM 402"
+            android:textColor="@color/colorWhite"
+            />
 
 
 
 
-    </ListView>
 
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btncom403"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="COM 403"
+            android:textColor="@color/colorWhite"
+            />
+
+        <Button
+            android:id="@+id/btncom404"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="COM 404"
+            android:textColor="@color/colorWhite"
+            />
+
+
+
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btncom405"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="COM 405"
+            android:textColor="@color/colorWhite"
+            />
+
+        <Button
+            android:id="@+id/btncom406"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="COM 406"
+            android:textColor="@color/colorWhite"
+            />
+
+
+
+
+
+
+    </LinearLayout>
 </LinearLayout>
