two files for each activity were removed

--- a/app/src/main/res/layout/activity_attendance_402.xml
+++ b/app/src/main/res/layout/activity_attendance_402.xml
@@ -7,7 +7,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".com406">
+    tools:context=".attendance_402">
+
+    <EditText
+        android:id="@+id/edttextid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="ID"
+        android:padding="10dp"/>
 
 
     <LinearLayout
@@ -15,47 +23,19 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <Button
-            android:id="@+id/btncom406s"
+            android:id="@+id/btnSign_attendance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="STUDENTS"
+            android:background="@color/colorCyan"
+            android:text="SIGN ATTENDANCE"
             android:textColor="@color/colorWhite"
             />
-
-        <Button
-            android:id="@+id/btncom406a"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="ATTENDANCE"
-            android:textColor="@color/colorWhite"
-            />
-
-
-
-
 
 
     </LinearLayout>
-
-
-
-
-
-
 
 
 </LinearLayout>
