--- a/app/src/main/res/layout/activity_studentcom403.xml
+++ b/app/src/main/res/layout/activity_studentcom403.xml
@@ -48,7 +48,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnSave"
+            android:id="@+id/btncom403s"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
