--- a/app/src/main/res/layout/activity_com404.xml
+++ b/app/src/main/res/layout/activity_com404.xml
@@ -23,7 +23,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btncom404s"
+            android:id="@+id/com_404s"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -34,7 +34,7 @@
             />
 
         <Button
-            android:id="@+id/btncom404a"
+            android:id="@+id/com_404a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
