--- a/app/src/main/res/layout/activity_com405.xml
+++ b/app/src/main/res/layout/activity_com405.xml
@@ -23,7 +23,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btncom405s"
+            android:id="@+id/com_405s"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -34,7 +34,7 @@
             />
 
         <Button
-            android:id="@+id/btncom405a"
+            android:id="@+id/com_405a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
